--- a/proyecto covid.ipynb
+++ b/proyecto covid.ipynb
@@ -669,6 +669,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e07b846",
+   "metadata": {},
+   "source": [
+    "### 📊 Visualización de métricas clave de COVID-19\n",
+    "\n",
+    "En este módulo se generan gráficos para explorar visualmente las principales métricas del dataset `covid_8_columnas.csv`:\n",
+    "\n",
+    "- Distribución de fallecidos por edad.\n",
+    "- Provincias con mayor cantidad de casos positivos confirmados.\n",
+    "- Relación entre fallecimiento y uso de cuidados intensivos.\n",
+    "- Tasa de mortalidad general.\n",
+    "- Uso de asistencia respiratoria mecánica en fallecidos.\n",
+    "- Distribución de fallecidos por sexo.\n",
+    "- Pacientes en cuidados intensivos según tipo de financiamiento.\n",
+    "\n",
+    "💡 Todos los gráficos permiten identificar patrones relevantes sin mostrar los valores exactos, destacando tendencias generales y comparaciones entre categorías.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "98a26709",
